engine-net-2/examples/Errors/AttributeEdgeUnknown.grs
new graph "Rules.grg"

exec (n:N,e:E,c:C,tc:TC)=initExtended ;> { e.b = 43 }

quit
